:uri-repo: https://github.com/asciidoctor/kramdown-asciidoc

This document provides a high-level view of the changes to {project-name} by release.
For a detailed view of what has changed, refer to the {uri-repo}/commits/master[commit history] on GitHub.

== Unreleased

=== Changed

* escape codespan text using passthrough if it contains a URL
* add blank line after list item that contains a table

== 1.0.0.alpha.9 (2018-07-10) - @mojavelinux

=== Changed

* escape codespan using pass macro if text contains double plus
* add specialcharacters replacement to inline pass macro
* don't add newline after period at start of line when producing ventilated prose
* use :imagesdir API option or --imagesdir CLI option to set implicit imagesdir instead of attribute

== 1.0.0.alpha.8 (2018-07-03) - @mojavelinux

=== Added

* add support for Ruby 2.3; add to CI matrix

=== Changed

* don't escape double hyphen in codespan unless surrounded by spaces or word chars
* treat leading specialchar (<, >, or &) as a word character (since it gets converted to a char reference)

== 1.0.0.alpha.7 (2018-07-02) - @mojavelinux

=== Added

* add :wrap option to control line wrapping behavior (:ventilate, :none, and :preserve) (#11)
* add --wrap CLI option to control :wrap option (#11)
* add support for unconstrained formatting (em, strong, and codespan) (#6)
* escape all replaceable text (arrows and ellipses) when converting regular text
* replace double plus in codespan with \{pp} attribute reference
* escape attribute references in regular text
* use passthrough for codespan if text contains an attribute reference
* use pass macro to escape literal codespan that contains ++
* escape codespan that contains replacements (#12)

=== Changed

* add replace_line method to Writer
* replace .md extension with .adoc in text of interdoc xref
* replace a non-breaking space with a single space instead of \{nbsp}

== 1.0.0.alpha.6 (2018-06-26) - @mojavelinux

=== Added
